--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,4 @@ DB_HOST=ASK YOUR TEAMMATE
 DB_DATABASE=ASK YOUR TEAMMATE
 DB_PASSWORD=ASK YOUR TEAMMATE 
 DB_PORT=ASK YOUR TEAMMATE
+JWT_SECRET=ASK YOUR TEAMMATE
