--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aws-sdk": "^2.1414.0",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "mock-aws-s3": "^4.0.2",
+    "nock": "^13.3.1",
     "pg": "^8.11.1",
     "postgresql": "^0.0.1",
     "react": "^18.2.0",
