--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,14 @@
-DB_USER=ASK YOUR TEAMMATE
-DB_HOST=ASK YOUR TEAMMATE
-DB_DATABASE=ASK YOUR TEAMMATE
-DB_PASSWORD=ASK YOUR TEAMMATE 
-DB_PORT=ASK YOUR TEAMMATE
-JWT_SECRET=ASK YOUR TEAMMATE
+DB_USER=
+DB_HOST=
+DB_DATABASE=
+DB_PASSWORD= 
+DB_PORT=
+JWT_SECRET=
+
+
+JWT_SECRET_PASSWORD_RESET=
+API_FORGOT_KEY=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
