--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.1",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.3.1",
+    "nodemailer": "^6.9.3",
     "pg": "^8.11.1",
     "postgresql": "^0.0.1",
     "react": "^18.2.0",
