admin page and article dashboard in progress

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.9.0",
     "sass": "^1.60.0"
   },
