--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
+    "dompurify": "^3.0.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
@@ -22,6 +23,7 @@
     "nock": "^13.3.1",
     "nodemailer": "^6.9.3",
     "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
     "postgresql": "^0.0.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
@@ -29,7 +31,8 @@
     "react-helmet": "^6.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.9.0",
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "sequelize": "^6.32.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
