--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dompurify": "^3.0.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^122.0.0",
     "jsonwebtoken": "^9.0.1",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.3.1",
