--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "aws-sdk": "^2.1414.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
@@ -17,6 +19,7 @@
     "cors": "^2.8.5",
     "dompurify": "^3.0.5",
     "dotenv": "^16.3.1",
+    "emoji-mart": "^5.5.2",
     "express": "^4.18.2",
     "googleapis": "^122.0.0",
     "jsonwebtoken": "^9.0.1",
