--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "dotenv": "^16.3.1",
     "emoji-mart": "^5.5.2",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "googleapis": "^122.0.0",
     "jsonwebtoken": "^9.0.1",
     "mock-aws-s3": "^4.0.2",
+    "multer": "^1.4.5-lts.1",
     "nock": "^13.3.1",
     "nodemailer": "^6.9.3",
+    "path": "^0.12.7",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
+    "pica": "^9.0.1",
     "postgresql": "^0.0.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
@@ -36,7 +40,8 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.9.0",
     "sass": "^1.60.0",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "sharp": "^0.32.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
