--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "form-data": "^4.0.0",
     "googleapis": "^122.0.0",
     "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "mock-aws-s3": "^4.0.2",
     "multer": "^1.4.5-lts.1",
     "nock": "^13.3.1",
