--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dompurify": "^3.0.5",
     "dotenv": "^16.3.1",
+    "emailjs-com": "^3.2.0",
     "emoji-mart": "^5.5.2",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
