last updates before prod

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,16 +1,9 @@
 DB_USER=
 DB_HOST=
 DB_DATABASE=
-DB_PASSWORD=
 DB_PORT=
 JWT_SECRET=
 
-API_FORGOT_KEY=
-SMTP_HOST=
-SMTP_PORT=
-SMTP_USERNAME=
-SMTP_PASSWORD=
-JWT_SECRET_PASSWORD_RESET=
 
-MAIL_CLIENT_ID=
-MAIL_CLIENT_SECRET=
+MAIL_USER=
+MAIL_PSD=
