--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bdg",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://main.d3oxdrtuexs461.amplifyapp.com",
+  "homepage": "https://leblogdugamer.com",
   "type": "module",
   "scripts": {
     "dev": "vite",
