--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite",
-    "serve-heroku": "vite --host 0.0.0.0 --port $PORT preview"
+    "start": "vite"
   },
   "dependencies": {
-    "vite": "^4.4.2",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "aws-sdk": "^2.1414.0",
@@ -40,14 +38,13 @@
     "pica": "^9.0.1",
     "postgresql": "^0.0.1",
     "react": "^18.2.0",
-    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.9.0",
     "sass": "^1.60.0",
-    "sequelize": "^6.32.1",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "vite": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -55,5 +52,4 @@
     "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.2.0"
   }
-  
 }
