--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "bdg",
   "private": true,
-  "version": "0.0.0",
-  "homepage": "https://leblogdugamer.com",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -31,7 +30,9 @@
     "mock-aws-s3": "^4.0.2",
     "multer": "^1.4.5-lts.1",
     "nock": "^13.3.1",
+    "node": "^20.5.1",
     "nodemailer": "^6.9.4",
+    "npm": "^10.0.0",
     "path": "^0.12.7",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
@@ -43,6 +44,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.9.0",
     "sass": "^1.60.0",
+    "serve": "^14.2.1",
     "sharp": "^0.32.5",
     "vite": "^4.4.2"
   },
