--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "postinstall": "npm install"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.1.2",
