--- a/package.json
+++ b/package.json
@@ -46,9 +46,8 @@
     "react-router-dom": "^6.9.0",
     "sass": "^1.60.0",
     "serve": "^14.2.1",
-    "sharp": "^0.32.5",
-    "vite": "^4.4.2"
-  },
+    "sharp": "^0.32.5"
+    },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
